# notepad-rs

./: .gitignore  Cargo.toml  README.md
notepad_core/: Cargo.toml
notepad_gui/: Cargo.toml
src/: edit.rs  lib.rs
src/edit/: find.rs
