[package]
name = "notepad"
version = "0.0.1"
authors = [ "Chris Ohk <utilforever@gmail.com>" ]
edition = "2021"
description = "A cross-platform, re-implementation of Notepad++ written in Rust"

readme = "README.md"
license = "MIT"

[[bin]]
name = "notepad"
path = "notepad_gui/src/main.rs"

[workspace]
members = [ "notepad_gui" ]
